# E3-miu-GNN

./: CITATION.cff  CONTRIBUTING.md  Datasets_Preparation.py  E3_miu_GNN.py  IMPLEMENTATION_STATUS.md  LICENSE  NOTICE.md  README.md  Verify_Program_Phonon.py  pyproject.toml  requirements.txt
coupling/: README.md  ase_example.py  llm_tools.json  model_manifest.schema.json  prediction_result.schema.json  task_example.json  task_request.schema.json
docs/: API.md  ARCHITECTURE.md  COUPLING.md  DATASETS.md  FORMULAE.md  INTERFACES.md  PAPER.md  PHYSICS.md  REPRODUCIBILITY.md  SCIENTIFIC_BACKGROUND.md  TRAINING_AND_VALIDATION.md
e3mu/: __init__.py  _backend.py  api.py  calculator.py  cli.py
models/: base model with E-MAE 0.43eV_atoms.pt  tiny_final_selected.pt
skills/e3-miu-gnn/: SKILL.md
skills/e3-miu-gnn/agents/: openai.yaml
skills/e3-miu-gnn/references/: API.md  CAPABILITIES.md  WORKFLOWS.md
skills/e3-miu-gnn/scripts/: preflight_e3mu.py  run_e3mu_task.py
