[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "e3-miu-gnn"
version = "0.1.0"
description = "Mixed-granularity E(3)-equivariant atomistic graph neural network"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{name = "Fona Group"}]
dependencies = [
  "numpy>=1.26",
  "torch>=2.3,<3",
  "torch-geometric>=2.5,<3",
  "ase>=3.22",
  "scipy>=1.11",
]

[project.optional-dependencies]
data = ["h5py>=3.10", "ijson>=3.3,<4", "pyarrow>=16", "duckdb>=1.2,<2"]
physics = ["torch-pme==0.5.0", "tad-dftd4==0.8.0", "dftd4==4.2.0"]
phonon = ["phonopy>=2.30,<5", "seekpath>=2.1,<3", "matplotlib>=3.8"]
gui = ["PyQt6>=6.7,<7", "matplotlib>=3.8"]
dev = ["pytest>=8", "psutil>=5.9"]
all = [
  "h5py>=3.10",
  "ijson>=3.3,<4",
  "pyarrow>=16",
  "duckdb>=1.2,<2",
  "torch-pme==0.5.0",
  "tad-dftd4==0.8.0",
  "dftd4==4.2.0",
  "phonopy>=2.30,<5",
  "seekpath>=2.1,<3",
  "matplotlib>=3.8",
  "PyQt6>=6.7,<7",
  "pytest>=8",
  "psutil>=5.9",
]

[project.scripts]
e3mu = "e3mu.cli:main"

[tool.setuptools]
py-modules = ["E3_miu_GNN", "Verify_Program_Phonon"]

[tool.setuptools.packages.find]
include = ["e3mu*"]
